# COSC4315

./: README.md
assign1/: assign1.txt
assign1/go/: build.sh  go.mod  perfect_number.go  perfect_number_test.go
assign1/java/: pom.xml
assign1/ruby/: perfect_number.rb
assign1/ruby/spec/: tests_perfect_number_spec.rb
assign2/erlang/: LICENSE.md  build.sh  rebar.config
assign2/erlang/src/: fibonacci.erl
assign2/erlang/test/: fibonacci_test.erl
assign2/haskell/: LICENSE  build.sh  haskell.cabal
assign2/haskell/src/: Fibonacci.hs
assign2/haskell/test/: Spec.hs
assign2/lua/: build.sh
assign2/lua/lib/: luaunit.lua
assign2/lua/src/: fibonacci.lua
assign2/lua/test/: test_fibonacci.lua
assign3/: assign3.txt
assign3/kotlin/: settings.gradle.kts
assign3/kotlin/gradle/: libs.versions.toml
assign3/kotlin/lib/: build.gradle.kts
assign3/ruby/: scheduler.rb
assign4/javascript/: package-lock.json  package.json  run.sh
assign4/rust/: Cargo.toml  run.sh
assign4/rust/src/: guessing_game.rs  (+1 more)
midterm1/q01/: build.sh
midterm1/q02/: question.txt
midterm1/q03/: question.txt
midterm1/q05/: question.txt
midterm1/q06/: question.txt
midterm1/q07/: question.txt
midterm1/q08/: build.sh
midterm1/q10/: question.txt
midterm2/q01/: question.txt
midterm2/q02/: question.txt
midterm2/q03/: build.sh  package-lock.json  package.json
midterm2/q05/: person_details.hs  person_details.scala  question.txt
midterm2/q06/: question.txt
midterm2/q07/: question.js
midterm2/q08/: question.txt
midterm2/q09/: question.txt
midterm2/q10/: question.txt
(+13 files in other folders)
