cabal-version:      3.4
name:               haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Suchanut Namcharoen
maintainer:         suchanut3134@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Fibonacci
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.17 && < 4.21
    hs-source-dirs:   src
    default-language: GHC2021

test-suite haskell-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base >= 4.17 && < 4.21,
        hspec,
        haskell
